<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.yasunaka.compras.activity.AboutActivity">

    <include layout="@layout/include_toolbar"/>

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:fontFamily="@font/notoderifscmedium"
            android:layout_marginTop="?attr/actionBarSize"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/informacoes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/informacoes"
            android:textSize="17sp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@+id/titulo"
            android:fontFamily="@font/notoderifscmedium"
            android:textStyle="normal"
            android:padding="10dp"
            android:textAlignment="center"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/line"
            android:background="@drawable/line_style"
            android:layout_below="@+id/informacoes"
              android:padding="10dp"
            android:layout_centerHorizontal="true"/>

     <RelativeLayout
             android:id="@+id/relativeLayoutInfo"
             android:background="@drawable/info_dev_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="45dp"
             android:layout_marginLeft="45dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:layout_below="@+id/line"
             android:padding="5dp"
            android:elevation="6dp">


         <TextView
                 android:layout_centerHorizontal="true"
                 android:id="@+id/dev"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/developer"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:paddingTop="2dp"
                 android:fontFamily="@font/notoderifscmedium"/>


         <TextView
                 android:layout_centerHorizontal="true"
                 android:id="@+id/nome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Thiago Issao Yasunaka"
                 android:textStyle="normal"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
                 android:padding="1dp"
                 android:fontFamily="@font/notoderifscmedium"
                 android:layout_below="@+id/dev"/>

         <TextView
                 android:layout_centerHorizontal="true"
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="E-mail:"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:padding="1dp"
                 android:layout_below="@id/nome"
                 android:fontFamily="@font/notoderifscmedium"/>


         <TextView
                 android:layout_centerHorizontal="true"
                 android:id="@+id/devEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="thiagoyasunaka@hotmail.com"
                 android:textStyle="normal"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
                 android:padding="1dp"
                 android:fontFamily="@font/notoderifscmedium"
                 android:layout_below="@+id/email"
         />

     </RelativeLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/line2"
              android:background="@drawable/line_style"
              android:layout_below="@+id/relativeLayoutInfo"
              android:padding="10dp"
              android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/icons"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/linkIcon"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:padding="1dp"
            android:fontFamily="@font/notoderifscmedium"
            android:layout_below="@+id/line2"
    />



    <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/icons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_icons8"/>


</RelativeLayout>
</ScrollView>