<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        card_view:cardCornerRadius="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        xmlns:card_view="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNomeProduto"
                android:maxWidth="200dp"
                android:gravity="center"
                android:textSize="18sp"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:text="sample"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="2sp"/>

        <ImageButton
                android:layout_width="@dimen/ic_edit"
                android:layout_height="@dimen/ic_edit"
                android:padding="5dp"
                android:id="@+id/imgAdapterCarrinho"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_add_carrinho"
                android:layout_marginRight="15dp"
                android:layout_marginTop="13dp"
                android:layout_alignParentTop="true"/>

        <TextView
                android:id="@+id/textViewQuantidade"
                android:layout_margin="2dp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="14sp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:layout_below="@+id/textViewNomeProduto"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valorQuantidade"
                android:maxWidth="50dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="3"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:layout_marginTop="27dp"
                android:maxLines="1"
                android:textSize="14sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/un"
                android:text="Un"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:gravity="center"
                android:layout_marginTop="27dp"
                android:layout_toRightOf="@id/valorQuantidade"
        />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/price"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:layout_below="@+id/textViewQuantidade"
                android:id="@+id/textViewPreco"
                android:padding="5dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valorPreco"
                android:maxWidth="80dp"
                android:gravity="center"
                android:textSize="14sp"
                android:text="12,50"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipoMoeda"
                android:textSize="14sp"
                android:maxLines="1"
                android:layout_toRightOf="@id/valorPreco"
                android:layout_below="@id/valorQuantidade"
                android:layout_marginTop="5dp"
                android:paddingRight="3dp"
                android:paddingTop="4dp"
                android:layout_marginLeft="3dp"
                android:textColor="@android:color/black"
                android:text="@string/tipoMoeda"/>

        <ImageButton
                android:id="@+id/imgEdit"
                android:layout_width="@dimen/ic_edit"
                android:layout_height="@dimen/ic_edit"
                android:background="@drawable/ic_edit"
                android:padding="7dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@id/valorQuantidade"/>

    </RelativeLayout>



</android.support.v7.widget.CardView>